# solo5e

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Ffi.psm1  README.md  check.ps1  check.sh  ffi-wrapper.ps1  fighter.json  fighter_bom.json  local.properties  settings.gradle.kts
.github/: copilot-instructions.md
.github/workflows/: rust-ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/solo5e/: ExampleInstrumentedTest.kt  FfiBuiltinsTests.kt  FfiMoreTests.kt  FfiSimTests.kt  FfiSmokeTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/solo5e/: Ffi.kt  MainActivity.kt
app/src/main/java/com/solo5e/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/solo5e/: ExampleUnitTest.kt
cli/: Cargo.toml
cli/src/: main.rs
content/characters/: fighter_dump.json  sample_fighter.json
content/encounters/: goblin_ambush.json
content/targets/: goblin.json  poison_goblin.json  skeleton.json
content/weapons/: basic.json
docs/: android-ffi-build.md  conditions.md  life_and_death.md
engine/: Cargo.toml
engine/src/: api.rs  checks.rs  conditions.rs  content.rs  lib.rs  life.rs
engine/src/combat/: actions.rs
engine/tests/: actor.rs  api_builtins.rs  api_duel.rs  attack.rs  check.rs  conditions.rs  crit_cover.rs  grapple_shove.rs  life.rs
ffi/: Cargo.toml
ffi/examples/: test_ffi.rs
ffi/src/: lib.rs
gradle/wrapper/: gradle-wrapper.properties
schema/: actor.schema.json  encounter.schema.json  target.schema.json  weapons.schema.json
(+6 files in other folders)
