[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"
engine = { path = "../engine" }

[[bin]]
name = "simulate-vs"
path = "src/bin/simulate_vs.rs"
