[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
thiserror = "1"
anyhow = "1"
serde_json = "1.0.145"
serde_yaml = "0.9.34"
indexmap = "2.12.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[dev-dependencies]
assert_cmd = "2.0.17"
insta = "1"
predicates = "3.1.3"
proptest = "1"
